# spatialaug

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  datasets.md  plan.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/spatialaug/: __init__.py
src/spatialaug/augmenters/: __init__.py  synthetic.py
src/spatialaug/benchmark/: __init__.py  metrics.py  missingness.py  runner.py  runs.py
src/spatialaug/benchmark/datasets/: __init__.py  fns.py
src/spatialaug/imputers/: __init__.py  base.py  gbm.py  idw.py  knn.py  kpr.py  kriging.py  mean.py  tabpfn.py  uk.py
src/spatialaug/metrics/: __init__.py  cv.py  errors.py  morans.py
src/spatialaug/privacy/: __init__.py  value_based.py
src/spatialaug/transfer/: __init__.py  evaluator.py
src/spatialaug/utils/: __init__.py  geo.py  profiler.py
tests/: test_benchmark_metrics.py  test_benchmark_runner.py  test_buffered_cv.py  test_cv.py  test_error_metrics.py  test_fns_loader.py  test_gbm.py  test_idw.py  test_knn.py  test_kpr.py  test_kriging.py  test_mean.py  test_missingness.py  test_morans.py  test_multi_seed.py  test_profiler.py  test_runs.py  test_spatial_cv_benchmark.py  test_synthetic_augmenter.py  test_tabpfn.py  test_transfer_evaluator.py  test_uk.py  test_value_based_mask.py
