[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spatialaug"
version = "0.0.1"
description = "Robustness benchmark framework for geospatial interpolation and augmentation"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Anatoliy Bannikov" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.26,<2.2",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.4",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
kriging = [
    "pykrige>=1.7",
]
ml = [
    "lightgbm>=4.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]
all = [
    "spatialaug[kriging,ml,dev]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
